<resources>
    <string name="app_name">Special Chat</string>
    <string name="User_ID">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search_new_friends">Search new friends</string>
    <string name="login_page">Login Page</string>
    <string name="search">Search</string>
    <string name="chats">Chats</string>
    <string name="font_login_page_pic">Font login page picture</string>
    <string name="me">Me</string>
    <string name="contacts">Contacts</string>
    <string name="moments">Moments</string>
    <string name="features_are_still_being_perfected">The features are still being perfected...</string>
    <string name="user_profile_pic">user profile pic</string>
    <string name="zhong_wenliang">Zhong Wenliang</string>
</resources>
