<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#333">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_new_friends"
        android:textSize="28sp"
        android:textColor="#eee"
        android:gravity="center"
        android:layout_margin="6dp"
        android:paddingHorizontal="18dp" />

    <EditText
        android:id="@+id/text_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/User_ID"
        android:textSize="20sp"
        android:hint="@string/User_ID"
        android:textColor="#222"
        android:background="@drawable/set_button_selector"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_marginVertical="8dp"
        android:autofillHints="friend_user_id" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="27sp"
        android:layout_marginHorizontal="66dp"
        android:background="@drawable/set_button_selector"/>

    <ListView
        android:id="@+id/find_new_friend_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>