<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#333">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textSize="36sp"
        android:textColor="#eee"
        android:gravity="center"
        android:layout_margin="24dp"
        android:paddingHorizontal="18dp"
        android:paddingVertical="6dp"/>

    <EditText
        android:id="@+id/text_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text=""
        android:textSize="20sp"
        android:hint="@string/User_ID"
        android:textColor="#222"
        android:background="@drawable/set_button_selector"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:layout_marginVertical="8dp"
        android:autofillHints="user_id" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:hint="@string/password"
        android:textColor="#222"
        android:background="@drawable/set_button_selector"
        android:paddingHorizontal="18dp"
        android:paddingVertical="8dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="33sp"
        android:layout_margin="48dp"
        android:background="@drawable/set_button_selector"/>

</LinearLayout>


<!--<androidx.constraint layout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".LoginActivity"-->
<!--    android:background="#333">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical">-->

<!--

   </LinearLayout>-->
<!--</androidx.constraint layout.widget.ConstraintLayout>-->